--- a/style.css
+++ b/style.css
@@ -3,8 +3,12 @@ body {
     padding: 0;
 }
 
+:root {
+    --primary: rgba(86, 145, 255, 0.8);
+}
+
 nav ul {
-    background-color: aquamarine;
+    background-color: var(--primary);
     display: flex;
     margin: 0;
     padding: 1em;
@@ -14,4 +18,9 @@ nav ul li {
     display: flex;
     flex-direction: row;
     margin-right: 1em;
+}
+
+.nav-menu {
+    text-decoration: none;
+    color: white;
 }
