--- a/style.css
+++ b/style.css
@@ -12,13 +12,13 @@ nav ul {
     background-color: var(--primary);
     display: flex;
     margin: 0;
-    padding: 1em;
+    padding: 1em 6em;
 }
 
 nav ul li {
     display: flex;
     flex-direction: row;
-    margin-right: 1em;
+    margin-right: 1.5em;
 }
 
 .nav-menu {
