--- a/style.css
+++ b/style.css
@@ -33,8 +33,34 @@ header {
 }
 
 header .left {
+    position: relative;
     flex-grow: 1;
-    padding-left: 10em;
+    display: flex;
+    /* padding: 10em 10em 10em 5em; */
+    flex-direction: column;
+    color: var(--primary-color);
+    box-shadow: 1px -0.5px 2px black;
+    justify-content: flex-end;
+    background-image: url(img/pexels-christina-morillo-1181675.jpg);
+    background-size: cover;
+    text-shadow: 1px -0.5px 2px black;
+}
+
+.reset-margin {
+    margin: 0;
+}
+
+.bg-filter {
+    position: relative;
+    background-color: #494a4b71;
+    width: 100%;
+    height: 100%;
+}
+
+.hello {
+    position: absolute;
+    bottom: 0;
+    margin: 8em;
 }
 
 header .right {
