- เพิ่ม class contact - จัด layout

--- a/style.css
+++ b/style.css
@@ -36,7 +36,6 @@ header .left {
     position: relative;
     flex-grow: 1;
     display: flex;
-    /* padding: 10em 10em 10em 5em; */
     flex-direction: column;
     color: var(--primary-color);
     box-shadow: 1px -0.5px 2px black;
@@ -78,8 +77,10 @@ header .right p {
     margin: 0;
 }
 
-header .right address {
+.contact {
     font-style: normal;
+    margin-top: 2em;
+
 }
 
 header .right address a {
