--- a/style.css
+++ b/style.css
@@ -1,12 +1,17 @@
+:root {
+    --primary: rgba(86, 145, 255, 0.8);
+    --primary-color: white;
+}
+
 body {
     margin: 0;
     padding: 0;
     font-family: 'Sriracha', cursive;
 }
 
-:root {
-    --primary: rgba(86, 145, 255, 0.8);
-    --primary-color: white;
+.container {
+    max-width: 1024px;
+    margin: auto;
 }
 
 nav ul {
@@ -27,18 +32,15 @@ nav ul li {
     color: var(--primary-color);
 }
 
-header {
+header .container {
     display: flex;
     padding: 0;
 }
 
 header .left {
-    position: relative;
     flex-grow: 1;
-    display: flex;
-    flex-direction: column;
     color: var(--primary-color);
-    box-shadow: 1px -0.5px 2px black;
+    box-shadow: 1px -0.5px 4px rgb(16, 89, 224);
     justify-content: flex-end;
     background-image: url(img/pexels-christina-morillo-1181675.jpg);
     background-size: cover;
@@ -51,7 +53,7 @@ header .left {
 
 .bg-filter {
     position: relative;
-    background-color: #494a4b71;
+    background-color: #46474771;
     width: 100%;
     height: 100%;
 }
@@ -59,7 +61,7 @@ header .left {
 .hello {
     position: absolute;
     bottom: 0;
-    margin: 8em;
+    margin: 8em 8em 8em 6em;
 }
 
 header .right {
@@ -106,4 +108,26 @@ header .right img {
     margin-top: 1em;
     text-decoration: none;
     font-style: normal;
+}
+
+main {
+    padding: 2em;
+}
+
+.section-2 {
+    display: flex;
+    flex-direction: row;
+
+}
+
+.edu-left {
+    flex: 2;
+}
+
+.exp-right {
+    flex: 2;
+}
+
+.wrapper {
+    flex: 1;
 }
