--- a/style.css
+++ b/style.css
@@ -183,3 +183,48 @@ footer .container {
     margin-right: 2em;
     margin-top: 5em;
 }
+
+@media screen and (max-width: 600px) {
+    nav ul {
+        flex-direction: column;
+        padding: 1em;
+    }
+
+    nav ul li {
+        padding-bottom: 0.4em;
+    }
+
+    header .left {
+        display: none;
+    }
+
+    header .right {
+        padding-bottom: 1em;
+    }
+
+    header .container {
+        display: block;
+        margin: 0;
+    }
+
+    main {
+        padding: 1em;
+    }
+
+    main .container,
+    .section-2 {
+        display: block;
+    }
+
+    #about {
+        margin-top: 0;
+    }
+
+    #skill {
+        margin-bottom: 0;
+    }
+
+    #edu {
+        margin-bottom: 0;
+    }
+}
