--- a/style.css
+++ b/style.css
@@ -171,16 +171,17 @@ footer .container {
 
 .footer-social {
     padding: 2em;
-    flex-grow: 1;
+    padding-right: 0;
 }
 
 .footer-contact {
     flex-grow: 1;
+    text-align: center;
 }
 
 .back-to-top img {
     width: 40px;
-    margin-right: 2em;
+    margin-right: 3.5em;
     margin-top: 5em;
 }
 
@@ -226,5 +227,13 @@ footer .container {
 
     #edu {
         margin-bottom: 0;
+    }
+
+    .footer-social {
+        padding-right: 0;
+    }
+
+    .back-to-top img {
+        margin-right: 2em;
     }
 }
